# AppSpawner

./: .gitignore  ROADMAP.md  dashboard.jsx  electron-builder.config.js  generate-icons.mjs  index.html  main.js  package-lock.json  package.json  tailwind.config.js  vite.config.mjs  vitest.config.mjs
scripts/: generate-icons.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  shortcuts.rs  store.rs
src/main/: crash-logger.js  icon-utils.js  main.js  preload.js  ssb-preload.js  store.js  store.test.js
src/main/blocklists/: domains.json  recommended-rules.js
src/main/ipc/: adblock.js  adblock.test.js  app-manager.js  credentials.js  diagnostics.js  downloads.js  history.js  scripts.js  sessions.js  shortcuts.js  totp.js  workspaces.js
src/renderer/: App.jsx  index.css
src/renderer/components/: AppCredentials.jsx  AppDiagnostics.jsx  AppScripts.jsx  BrowsingHistory.jsx  Downloads.jsx  ErrorBoundary.jsx  QuickLauncher.jsx  SecurityCenter.jsx  SessionSnapshots.jsx
src/renderer/components/Layout/: Sidebar.jsx  TitleBar.jsx
src/renderer/components/common/: AppCard.jsx  AppIcon.jsx  EmptyState.jsx  Menu.jsx  Modal.jsx  (+3 more)
src/renderer/contexts/: AppContext.jsx  I18nContext.jsx  SoundContext.jsx  ThemeContext.jsx  ToastContext.jsx  WorkspaceContext.jsx
src/renderer/lib/: api.js  constants.js  utils.js
src/renderer/views/: AppTools.jsx  CreateApp.jsx  Dashboard.jsx  Discover.jsx  Insights.jsx  Onboarding.jsx  Profiles.jsx
(+14 files in other folders)
