[package]
name = "appspawner"
version = "3.1.0"
description = "Site-Specific Browser Manager"
authors = ["AppSpawner"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri             = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog         = "2"
tauri-plugin-opener         = "2"
tauri-plugin-autostart      = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-process        = "2"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
uuid              = { version = "1", features = ["v4"] }
dirs              = "5"
url               = "2"

[target.'cfg(target_os = "windows")'.dependencies]
# Para crear .lnk via PowerShell (incluido en Windows, sin deps extra)

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level   = "z"       # Optimizar por tamaño
lto         = true
codegen-units = 1
panic       = "abort"
strip       = true

[profile.dev]
incremental = true      # Compilación incremental para dev rápido
